@@ -6,8 +6,10 @@ import com.example.demo.model.Vehicle;
 import com.example.demo.repository.ServiceEntryRepository;
 import org.springframework.stereotype.Service;
 
-import java.util.Date;
+import java.time.LocalDate;
 import java.util.List;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 public class ServiceEntryServiceImpl implements ServiceEntryService {
@@ -24,19 +26,19 @@ public class ServiceEntryServiceImpl implements ServiceEntryService {
         Vehicle vehicle = entry.getVehicle();
 
         if (!vehicle.getActive()) {
-            throw new IllegalArgumentException("active vehicles");
+            throw new IllegalArgumentException("Vehicle must be active");
         }
 
-        if (entry.getServiceDate().after(new Date())) {
-            throw new IllegalArgumentException("future");
+        if (entry.getServiceDate().isAfter(LocalDate.now())) {
+            throw new IllegalArgumentException("Service date cannot be in the future");
         }
 
-        ServiceEntry last = repository
+        Optional<ServiceEntry> lastOpt = repository
                 .findTopByVehicleOrderByOdometerReadingDesc(vehicle);
 
-        if (last != null &&
-            entry.getOdometerReading() < last.getOdometerReading()) {
-            throw new IllegalArgumentException(">=");
+        if (lastOpt.isPresent() &&
+            entry.getOdometerReading() < lastOpt.get().getOdometerReading()) {
+            throw new IllegalArgumentException("Odometer reading cannot be less than last entry");
         }
 
         return repository.save(entry);
@@ -58,6 +60,6 @@ public class ServiceEntryServiceImpl implements ServiceEntryService {
         return repository.findAll()
                 .stream()
                 .filter(e -> e.getGarage().getId().equals(garageId))
-                .toList();
+                .collect(Collectors.toList());
     }
 }
